Fixed the unnecessary scrollbar of the profile sections

--- a/src/app/core/modules/table/table.component.scss
+++ b/src/app/core/modules/table/table.component.scss
@@ -44,3 +44,14 @@
   top: 0 !important;
   transform: translateY(0px) !important;
 }
+
+.hidden_scrollbar {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+.hidden_scrollbar::-webkit-scrollbar {
+  /* WebKit */
+  width: 0;
+  height: 0;
+}
